--- a/server/public/index.html
+++ b/server/public/index.html
@@ -94,6 +94,7 @@
   <script src="js/tile.js"></script>
   <script src="js/local_storage_manager.js"></script>
   <script src="js/game_manager.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
   <script src="js/application.js"></script>
 </body>
 </html>
