--- a/server/public/index.html
+++ b/server/public/index.html
@@ -20,7 +20,11 @@
   <div class="container">
     <div class="heading">
       <h1 class="title">2048</h1>
+      <!-- <div class="infos-container">
+        <div class="userNum-container">0</div>
+      </div> -->
       <div class="scores-container">
+        <div class="userNum-container">0</div>
         <div class="score-container">0</div>
         <div class="best-container">0</div>
       </div>
