fix animation closes #1

--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,9 @@
     <div class="heading">
       <h1 class="title">2048</h1>
       <div class="scores-container">
-        <div class="userNum-container">0</div>
-        <div class="score-container">0</div>
-        <div class="best-container">0</div>
+        <div id="userNum" class="best-container">0</div>
+        <div id="score-container" class="score-container">0</div>
+        <div id="best-container" class="best-container">0</div>
       </div>
     </div>
 
