update demo url

--- a/presentation.html
+++ b/presentation.html
@@ -67,7 +67,7 @@
 <div class="sl-block" data-block-type="text" style="width: 410px; left: 18px; top: 279px; height: auto;" data-block-id="dff0b5b9790850fad58c666ede0381c4"><div class="sl-block-content fragment" data-placeholder-tag="p" data-placeholder-text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin urna odio, aliquam vulputate faucibus id, elementum lobortis felis. Mauris urna dolor, placerat ac sagittis quis." style="text-align: left; z-index: 13;" data-fragment-index="0">
 <p><span style="color:rgb(255, 255, 255)">服务端维护惟一的一个游戏实例，游戏的每一个状态都包含与其对应的时间戳。客户端会用服务端发来的游戏状态更新视图(如果比最新的状态新)。</span></p>
 </div></div></section><section data-id="f7e064befe0cbc37fcc38ded8df75378"><div class="sl-block" data-block-type="text" style="width: 800px; left: 80px; top: 270px; height: auto;" data-block-id="cfc404fbd362cde04c5934b848a3fcc6"><div class="sl-block-content" data-placeholder-tag="h1" data-placeholder-text="Title Text">
-<h1><a href="http://vps.erichuang1994.me:3000/" target="_blank">DEMO</a></h1>
+<h1><a href="http://10.134.142.114:3000/" target="_blank">DEMO</a></h1>
 </div></div></section>
 			</div>
 		</div>
